# egssapi

./: .gitignore  Makefile.am  bootstrap  configure.ac  rebar.config
c_src/: config.h  gssapi_drv.c  krb5_deleg.c  port_util.c
egssapi/c_src/: gssapi_drv.c  port_util.h
src/: egssapi.app-in  egssapi.app.src  egssapi.erl  spnego.erl
